--- a/ShareX.HelpersLib.UnitTest/ShareX.HelpersLib.UnitTest.csproj
+++ b/ShareX.HelpersLib.UnitTest/ShareX.HelpersLib.UnitTest.csproj
@@ -110,11 +110,10 @@
     <Content Include="Resources\ResizeImageLimit2TestResult.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\ResizeImageLimit3TestResult.jpg" />
-    <Content Include="Resources\TestImage1.jpg">
+    <Content Include="Resources\ResizeImageLimit3TestResult.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\TestImage2.jpg">
+    <Content Include="Resources\TestImage.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
